--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <title>讀書計畫</title>
+    <title>胡的備審資料</title>
     <style>
         :root {
             --main-blue: #2196f3;
@@ -118,8 +118,8 @@
 </head>
 <body>
     <header>
-        <h1>我的讀書計畫</h1>
-        <p>新北高中30905 李偉博</p>
+        <h1>胡的備審資料</h1>
+        <p>新北高中31113 胡秉閎</p>
     </header>
 
     <main>
